# open-deql

./: .gitignore  .gitmodules  Cargo.toml  developerguid.md  simplecommands.md
.cargo/: config.toml
.github/: agents  instructions  prompts
deql-tests/deql-bruno-collection/: opencollection.yml
src/deql/: Cargo.toml
src/deql/src/: allocator.rs  dereg.rs  error.rs  lib.rs  meta_json.rs  metrics.rs  metrics_tests.rs  org_registry.rs  projection_tests.rs  projection_worker.rs  registry.rs  rehydrate.rs  rehydrate_impl.rs  replay.rs  validator.rs  worker_registry.rs  write_path_tests.rs
src/deql/src/core/: traits.rs  types.rs
src/deql/src/migration/: m20260508_000001_create_dereg_meta_store.rs  m20260508_000002_create_projection_watermark.rs  m20260508_000003_create_meta_concepts.rs  m20260508_000004_create_meta_aggregates.rs  m20260508_000005_create_meta_decisions.rs  m20260508_000006_create_meta_inspections.rs  m20260508_000007_create_meta_commands.rs  m20260508_000008_create_meta_events.rs  m20260508_000009_create_meta_templates.rs  m20260508_000010_create_meta_templates_instances.rs  m20260508_000011_create_dereg_id_sequence.rs  mod.rs
src/deql/src/parser/: ast.rs  dispatch.rs  error.rs  lexer.rs  mod.rs  parser.rs  pretty.rs  token.rs
src/deql/src/store/: dereg_meta_store.rs  mod.rs  projection_watermark.rs  tests.rs
src/deql/src/store/projections/: meta_aggregates.rs  meta_commands.rs  meta_concepts.rs  meta_decisions.rs  meta_events.rs  meta_inspections.rs  meta_templates.rs  meta_templates_instances.rs  mod.rs
web/: tsconfig.app.json
(+32 files in other folders)
